--- a/index.html
+++ b/index.html
@@ -3,34 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <title>Feliz Aniversário, Amor 💖</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsividade -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       display: flex;
-      justify-content: center;
-      align-items: flex-start;
+      justify-content: flex-start;
+      align-items: center;
       flex-direction: column;
-      height: 100vh;
+      min-height: 100vh;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       font-family: 'Segoe UI', Arial, sans-serif;
-      overflow: hidden;
+      overflow-x: hidden;
       margin: 0;
-      padding-top: 30px;
+      padding: 30px 0;
       position: relative;
     }
 
+    /* Mensagem inicial */
     .hint {
-      font-size: 32px;
+      font-size: 32px; 
       font-weight: bold;
       color: #fff;
       text-shadow: 2px 2px 4px #c1124f;
-      margin-bottom: 60px;
       text-align: center;
-      width: 100%;
+      margin-bottom: 60px;
       padding: 0 10px;
+      width: 100%;
     }
 
+    /* Bolo */
     .cake {
       position: relative;
       width: 260px;
@@ -51,6 +53,7 @@
       box-shadow: inset 0 -5px 5px #ff4d6d33;
     }
 
+    /* Vela e chama */
     .candle {
       position: absolute;
       width: 14px;
@@ -60,27 +63,28 @@
       left: 50%;
       transform: translateX(-50%);
       border-radius: 4px;
+      cursor: pointer;
     }
 
     .flame {
       position: absolute;
       top: -22px;
-      left: 50%;
-      transform: translateX(-50%);
       width: 18px;
       height: 24px;
       background: radial-gradient(circle at 50% 60%, #ffeb3b, #ff9800);
       border-radius: 50%;
-      animation: flicker 0.4s infinite alternate;
-      cursor: pointer;
       filter: drop-shadow(0 0 6px #ffcc00);
+      animation: flicker 0.5s infinite alternate;
+      will-change: transform, opacity;
     }
 
     @keyframes flicker {
-      from { transform: translateX(-50%) scale(1); opacity: 1; }
-      to   { transform: translateX(-50%) scale(1.2); opacity: 0.8; }
+      0%   { transform: translateX(-50%) translateY(0) scale(1); opacity: 1; }
+      50%  { transform: translateX(-50%) translateY(-2px) scale(1.05); opacity: 0.9; }
+      100% { transform: translateX(-50%) translateY(0) scale(1); opacity: 1; }
     }
 
+    /* Mensagem após apagar a vela */
     .message {
       margin-top: 30px;
       font-size: 36px;
@@ -90,20 +94,10 @@
       color: #fff;
       text-shadow: 2px 2px 4px #c1124f;
       width: 100%;
+      padding: 0 10px;
     }
 
-    .hearts {
-      position: absolute;
-      font-size: 24px;
-      pointer-events: none;
-      animation: floatUp 6s linear forwards;
-    }
-
-    @keyframes floatUp {
-      0% { transform: translateY(100vh) scale(0.7); opacity: 1; }
-      100% { transform: translateY(-120vh) scale(1.3); opacity: 0; }
-    }
-
+    /* Fotos */
     .photos {
       display: flex;
       margin: 20px auto 0 auto;
@@ -121,6 +115,7 @@
       opacity: 0;
       transition: opacity 0.5s ease-in, transform 0.5s ease-in;
       transform: scale(0.8);
+      will-change: transform, opacity;
     }
 
     .photos img.show {
@@ -128,7 +123,21 @@
       transform: scale(1);
     }
 
-    /* Caixa de mensagem */
+    /* Corações */
+    .hearts {
+      position: absolute;
+      font-size: 24px;
+      pointer-events: none;
+      animation: floatUp 6s linear forwards;
+      will-change: transform, opacity;
+    }
+
+    @keyframes floatUp {
+      0% { transform: translateY(100vh) scale(0.7); opacity: 1; }
+      100% { transform: translateY(-120vh) scale(1.3); opacity: 0; }
+    }
+
+    /* Popup */
     .popup {
       position: fixed;
       top: 50%;
@@ -140,11 +149,9 @@
       box-shadow: 0 5px 20px rgba(0,0,0,0.3);
       text-align: center;
       font-size: 20px;
-      font-weight: bold;
-      color: #c1124f;
+      max-width: 90%;
       z-index: 100;
       transition: transform 0.5s ease-in-out;
-      max-width: 90%;
     }
 
     .popup.show {
@@ -162,19 +169,16 @@
       cursor: pointer;
     }
 
-    .popup h2 {
-      margin-bottom: 10px;
-    }
+    .popup h2 { margin-bottom: 10px; }
+    .popup p { margin-bottom: 10px; line-height: 1.4; }
 
-    .popup p {
-      margin-bottom: 10px;
-      line-height: 1.4;
-    }
-
-    /* Ajustes para telas menores */
+    /* Responsividade para mobile */
     @media (max-width: 480px) {
       .hint { font-size: 24px; margin-bottom: 40px; }
       .cake { width: 200px; height: 120px; }
+      .icing { height: 60px; }
+      .candle { width: 14px; height: 50px; top: -50px; }
+      .flame { width: 18px; height: 24px; top: -22px; }
       .message { font-size: 28px; }
       .photos img { width: 80px; }
       .popup { font-size: 18px; padding: 20px 15px; }
@@ -206,7 +210,6 @@
     <img src="9.jpeg" alt="foto9">
   </div>
 
-  <!-- Música de fundo -->
   <audio id="bgMusic" loop>
     <source src="musica.mp3" type="audio/mpeg">
     Seu navegador não suporta o elemento de áudio.
@@ -214,7 +217,6 @@
 
   <div class="popup" id="popup">
     <h2>🎉 Feliz Aniversário, Amor! 🎉</h2>
-
     <p>Eu me sinto <strong>tão sortudo</strong> por ter te conhecido…  
     Por ter cruzado com essa menina incrível que transforma qualquer dia comum em algo especial. ✨</p>
 
@@ -238,8 +240,6 @@
 
     function closePopup() {
       popup.classList.remove("show");
-      // Opcional: parar a música ao fechar
-      // music.pause();
     }
 
     flame.addEventListener("click", () => {
@@ -248,7 +248,7 @@
       photosContainer.style.opacity = 1;
       popup.classList.add("show");
 
-      // Música com fade-in suave
+      // Música com fade-in
       music.volume = 0;
       music.play();
       let vol = 0;
@@ -256,28 +256,26 @@
         if(vol < 1){
           vol += 0.02; 
           music.volume = vol;
-        } else {
-          clearInterval(fadeIn);
-        }
+        } else clearInterval(fadeIn);
       }, 100);
 
       // Mostrar fotos uma a uma
       photos.forEach((photo, index) => {
-        setTimeout(() => {
-          photo.classList.add("show");
-        }, index * 400);
+        setTimeout(() => photo.classList.add("show"), index * 400);
       });
 
-      // Corações contínuos na tela
+      // Corações contínuos
       setInterval(() => {
-        const heart = document.createElement('span');
-        heart.textContent = Math.random() > 0.5 ? '❤️' : '💖';
-        heart.className = 'hearts';
-        heart.style.left = (Math.random() * 100) + 'vw';
-        heart.style.fontSize = (16 + Math.random() * 30) + 'px';
-        document.body.appendChild(heart);
-        setTimeout(() => heart.remove(), 6000);
-      }, 150);
+        if(document.querySelectorAll('.hearts').length < 20){
+          const heart = document.createElement('span');
+          heart.textContent = Math.random() > 0.5 ? '❤️' : '💖';
+          heart.className = 'hearts';
+          heart.style.left = (Math.random() * 100) + 'vw';
+          heart.style.fontSize = (16 + Math.random() * 30) + 'px';
+          document.body.appendChild(heart);
+          setTimeout(() => heart.remove(), 6000);
+        }
+      }, 500);
     });
   </script>
 </body>
