--- a/index.html
+++ b/index.html
@@ -8,58 +8,55 @@
   <style>
     body {
       display: flex;
+      flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      flex-direction: column;
       min-height: 100vh;
+      margin: 0;
+      padding: 5vw 0;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       font-family: 'Segoe UI', Arial, sans-serif;
       overflow-x: hidden;
-      margin: 0;
-      padding: 30px 0;
       position: relative;
     }
 
-    /* Mensagem inicial */
     .hint {
-      font-size: 32px; 
+      font-size: 6vw;
       font-weight: bold;
       color: #fff;
       text-shadow: 2px 2px 4px #c1124f;
       text-align: center;
-      margin-bottom: 60px;
-      padding: 0 10px;
+      margin-bottom: 8vw;
+      padding: 0 5vw;
       width: 100%;
     }
 
-    /* Bolo */
     .cake {
       position: relative;
-      width: 260px;
-      height: 150px;
+      width: 50vw;
+      height: 30vw;
       background: #d2691e;
       border-radius: 15px;
       box-shadow: inset 0 0 15px #00000033;
-      margin: 0 auto;
+      margin-bottom: 5vw;
     }
 
     .icing {
       position: absolute;
       top: 0;
       width: 100%;
-      height: 60px;
+      height: 12vw;
       background: #fff0f5;
       border-radius: 15px 15px 0 0;
       box-shadow: inset 0 -5px 5px #ff4d6d33;
     }
 
-    /* Vela e chama */
     .candle {
       position: absolute;
-      width: 14px;
-      height: 50px;
+      width: 2.5vw;
+      height: 10vw;
       background: #fffacd;
-      top: -50px;
+      top: -10vw;
       left: 50%;
       transform: translateX(-50%);
       border-radius: 4px;
@@ -68,9 +65,11 @@
 
     .flame {
       position: absolute;
-      top: -22px;
-      width: 18px;
-      height: 24px;
+      top: -4.5vw;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 3vw;
+      height: 4vw;
       background: radial-gradient(circle at 50% 60%, #ffeb3b, #ff9800);
       border-radius: 50%;
       filter: drop-shadow(0 0 6px #ffcc00);
@@ -79,37 +78,34 @@
     }
 
     @keyframes flicker {
-      0%   { transform: translateX(-50%) translateY(0) scale(1); opacity: 1; }
-      50%  { transform: translateX(-50%) translateY(-2px) scale(1.05); opacity: 0.9; }
+      0% { transform: translateX(-50%) translateY(0) scale(1); opacity: 1; }
+      50% { transform: translateX(-50%) translateY(-1vw) scale(1.05); opacity: 0.9; }
       100% { transform: translateX(-50%) translateY(0) scale(1); opacity: 1; }
     }
 
-    /* Mensagem após apagar a vela */
     .message {
-      margin-top: 30px;
-      font-size: 36px;
+      margin-top: 5vw;
+      font-size: 6vw;
       font-weight: bold;
       display: none;
       text-align: center;
       color: #fff;
       text-shadow: 2px 2px 4px #c1124f;
-      width: 100%;
-      padding: 0 10px;
+      width: 90%;
     }
 
-    /* Fotos */
     .photos {
       display: flex;
-      margin: 20px auto 0 auto;
-      gap: 12px;
       flex-wrap: wrap;
       justify-content: center;
+      gap: 3vw;
       opacity: 0;
       transition: opacity 0.5s ease-in;
+      margin-top: 5vw;
     }
 
     .photos img {
-      width: 100px;
+      width: 20vw;
       border-radius: 12px;
       box-shadow: 0 0 12px #00000066;
       opacity: 0;
@@ -123,10 +119,9 @@
       transform: scale(1);
     }
 
-    /* Corações */
     .hearts {
       position: absolute;
-      font-size: 24px;
+      font-size: 4vw;
       pointer-events: none;
       animation: floatUp 6s linear forwards;
       will-change: transform, opacity;
@@ -137,18 +132,17 @@
       100% { transform: translateY(-120vh) scale(1.3); opacity: 0; }
     }
 
-    /* Popup */
     .popup {
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%) scale(0);
       background: #fff;
-      padding: 25px 20px;
+      padding: 5vw;
       border-radius: 16px;
       box-shadow: 0 5px 20px rgba(0,0,0,0.3);
       text-align: center;
-      font-size: 20px;
+      font-size: 4vw;
       max-width: 90%;
       z-index: 100;
       transition: transform 0.5s ease-in-out;
@@ -159,9 +153,9 @@
     }
 
     .popup button {
-      margin-top: 15px;
-      padding: 8px 20px;
-      font-size: 16px;
+      margin-top: 3vw;
+      padding: 2vw 4vw;
+      font-size: 3vw;
       border: none;
       border-radius: 8px;
       background: #c1124f;
@@ -169,20 +163,8 @@
       cursor: pointer;
     }
 
-    .popup h2 { margin-bottom: 10px; }
-    .popup p { margin-bottom: 10px; line-height: 1.4; }
-
-    /* Responsividade para mobile */
-    @media (max-width: 480px) {
-      .hint { font-size: 24px; margin-bottom: 40px; }
-      .cake { width: 200px; height: 120px; }
-      .icing { height: 60px; }
-      .candle { width: 14px; height: 50px; top: -50px; }
-      .flame { width: 18px; height: 24px; top: -22px; }
-      .message { font-size: 28px; }
-      .photos img { width: 80px; }
-      .popup { font-size: 18px; padding: 20px 15px; }
-    }
+    .popup h2 { margin-bottom: 2vw; }
+    .popup p { margin-bottom: 2vw; line-height: 1.4; }
   </style>
 </head>
 <body>
@@ -248,7 +230,6 @@
       photosContainer.style.opacity = 1;
       popup.classList.add("show");
 
-      // Música com fade-in
       music.volume = 0;
       music.play();
       let vol = 0;
@@ -259,19 +240,17 @@
         } else clearInterval(fadeIn);
       }, 100);
 
-      // Mostrar fotos uma a uma
       photos.forEach((photo, index) => {
         setTimeout(() => photo.classList.add("show"), index * 400);
       });
 
-      // Corações contínuos
       setInterval(() => {
         if(document.querySelectorAll('.hearts').length < 20){
           const heart = document.createElement('span');
           heart.textContent = Math.random() > 0.5 ? '❤️' : '💖';
           heart.className = 'hearts';
           heart.style.left = (Math.random() * 100) + 'vw';
-          heart.style.fontSize = (16 + Math.random() * 30) + 'px';
+          heart.style.fontSize = (4 + Math.random() * 4) + 'vw';
           document.body.appendChild(heart);
           setTimeout(() => heart.remove(), 6000);
         }
